--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-tweepy>=3.5.0
-textblob>=0.15.0
-nltk>=3.2.5
-numpy>=1.12.0
-matplotlib>=2.1.1
+tweepy==3.5.0
+matplotlib==2.1.2
+nltk==3.2.5
+numpy==1.14.0
+textblob==0.15.1
